packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_10.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 269
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';
const Header = $((decl1, {decl2}, [decl3]) => {

	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], {ident7}, {key: ident8});
	class Some {
		prop = ident9;
		method() {
			return ident10;
		}
	}

	return (
		<div onClick={(ident11) => ident11 + ident12} required={false}/>
	)
});

============================= project/test.tsx_Header_WlR3xnI6u38.tsx (ENTRY POINT)==

export const Header_WlR3xnI6u38 = (decl1, { decl2 }, [decl3])=>{
    ident1.no;
    ident2;
    ident1, ident3;
    ident1, ident3;
    ident4(ident5, [
        ident6
    ], {
        ident7
    }, {
        key: ident8
    });
    class Some {
        prop = ident9;
        method() {
            return ident10;
        }
    }
    return <div onClick={(ident11)=>ident11 + ident12} required={false}/>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\"kCAEiB,CAAC,OAAO,EAAC,KAAK,EAAC,EAAE,CAAC,MAAM;IAE3B,OAAO,EAAE;IACtB;IACU,QAAS;IACT,QAAS;IACnB,OAAO,QAAQ;QAAC;KAAO,EAAE;QAAC;IAAM,GAAG;QAAC,KAAK;IAAM;IAC/C,MAAM;QACL,OAAO,OAAO;QACd,SAAS;YACR,OAAO;QACR;IACD;IAEA,QACE,IAAI,SAAS,CAAC,UAAY,UAAU,SAAS,UAAU;AAE1D\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_WlR3xnI6u38",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WlR3xnI6u38",
  "canonicalFilename": "test.tsx_Header_WlR3xnI6u38",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    67,
    393
  ],
  "paramNames": [
    "decl1",
    "{decl2}",
    "[decl3]"
  ]
}
*/
============================= project/test.tsx ==

import { qrl } from "@qwik.dev/core";
//
/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_WlR3xnI6u38"), "Header_WlR3xnI6u38");


Some("{\"version\":3,\"sources\":[],\"names\":[],\"mappings\":\"\"}")
== DIAGNOSTICS ==

[]
